upd: Добавлена локализация на 7 языков

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -14,7 +14,7 @@
   },
   "work_activity_department_user_input": {
     "title": "📋 ستشير المستند:",
-    "title_dep": "إلى الرئيس",
+    "title_dep": "Начальнику",
     "description": "إذا أشرت إلى القسم بشكل غير صحيح ، فاضغط على زر \"back\" وأدخل الاسم الصحيح.",
     "buttons": {
       "correct_btn": "✅ كل شيء صحيح",
@@ -94,7 +94,7 @@
         "passport": {
           "title": "📝 ما الذي يجب تعديله في بيانات جواز السفر؟",
           "passport_serial_number": "📇 حدد المسلسل ورقم المستند\n\nمثال: رقم 1225673",
-          "passport_issue_date": "🗓 أشر إلى تاريخ الإصدار (dd.mm.yyyy)\n\nمثال: 08/14/1996",
+          "passport_issue_date": "🗓 أشر إلى تاريخ الإصدار (dd.mm.yyyy)\n\nمثال: 14.08.1996",
           "passport_issued": "🏢 حدد من تم إصدار المستند\n\nمثال: وزارة الشؤون الداخلية لأوزبكستان",
           "passport_expiry_date": "🗓 أشر إلى صحة جواز السفر (DD.MM.Yyyy)",
           "buttons": {
