--- a/locales/hi.json
+++ b/locales/hi.json
@@ -14,7 +14,7 @@
   },
   "work_activity_department_user_input": {
     "title": "📋 दस्तावेज़ इंगित करेगा:",
-    "title_dep": "बॉस को",
+    "title_dep": "Начальнику",
     "description": "यदि आपने विभाग को गलत तरीके से इंगित किया है, तो \"↩ Back\" बटन दबाएं और सही नाम दर्ज करें।",
     "buttons": {
       "correct_btn": "✅ सब सही है ",
@@ -94,7 +94,7 @@
         "passport": {
           "title": "📝 पासपोर्ट की जानकारी में क्या बदलना है?",
           "passport_serial_number": "📇 श्रृंखला और दस्तावेज़ संख्या को इंगित करें\n\nउदाहरण: नंबर 1225673",
-          "passport_issue_date": "🗓 मुद्दे की तारीख इंगित करें (dd.mm.yyyy)\n\nउदाहरण: 08/14/1996",
+          "passport_issue_date": "🗓 मुद्दे की तारीख इंगित करें (dd.mm.yyyy)\n\nउदाहरण: 14.08.1996",
           "passport_issued": "🏢 इंगित करें कि दस्तावेज़ कौन जारी किया गया था\n\nउदाहरण: उजबेकिस्तान के आंतरिक मामलों का मंत्रालय",
           "passport_expiry_date": "🗓 पासपोर्ट की वैधता को इंगित करें (dd.mm.yyyy)",
           "buttons": {
