--- a/locales/tj.json
+++ b/locales/tj.json
@@ -10,11 +10,11 @@
   },
   "work_activity_department_name": {
     "title": "Лутфан номи пурраи кафедраеро барои пешниҳоди ариза ворид кунед (одатан ин дар ҳуҷҷати сабти ном ё ҳуҷҷати муҳоҷират нишон дода мешавад)",
-    "example_text": "Масалан: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
+    "example_text": "Барои намуна: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
   },
   "work_activity_department_user_input": {
     "title": "📋 Ҳуҷҷат нишон дода мешавад:",
-    "title_dep": "Ба раҳбарӣ",
+    "title_dep": "Начальнику",
     "description": "Агар шумо кафедра нодуруст қайд карда бошед, тугмаи \"↩️ баргард\" -ро пахш кунед ва номи дурустро ворид кунед.",
     "buttons": {
       "correct_btn": "✅ Ҳамааш дуруст",
@@ -39,16 +39,16 @@
       "name_work": {
         "title": "👨🔧 номи касби худро фиристед",
         "description": "📌 • Муҳим: Аҷнабуда ҳуқуқ дорад танҳо касбҳои дар патент нишон додашударо иҷро кунад.",
-        "example": "Мисол: Ханд"
+        "example": "Мисол: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 Суроғаи ҳуқуқии корфармо дар формат қайд кунед: Индекси, шаҳр, кӯча, Корпусҳо (Cyrillic истифода)",
+        "title": "📍 Суроғаи ҳуқуқии корфармо дар формат қайд кунед: индекс, город, улица, корпус, дом (используйте кириллицу)",
         "example": "Мисол: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 Тасвири худро муайян кунед",
-        "format": "Формат: 10 ё 12 рақам",
-        "example": "Мисол: 77011234567"
+        "format": "Формат: 10 или 12 цифр",
+        "example": "Мисол: 7701234567"
       }
     },
     "wa_patent_medical_policy_number": {
@@ -62,7 +62,7 @@
     },
     "wa_polis_date": {
       "title": "📅 Мӯҳлати амали сиёсати VHI-ро қайд кунед",
-      "description": "Санаҳои ибтидо ва охири амалро дар формат ворид кунед: аз 06/15/2025 то 06/14/2026"
+      "description": "Санаҳои оғоз ва охири амалро дар формат ворид кунед: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 Тасдиқ:",
@@ -94,7 +94,7 @@
         "passport": {
           "title": "📝 Дар маълумоти паспорт чӣ чизро ислоҳ кардан лозим аст?",
           "passport_serial_number": "📇 рақами силсилавӣ ва рақамро қайд кунед\n\nМисол: № 1225673",
-          "passport_issue_date": "🗓 Санаи барориши (DD.MMM.YYYY) -ро қайд кунед\n\nМисол: 08/14/1996",
+          "passport_issue_date": "🗓 Санаи барориши (DD.MMM.YYYY) -ро қайд кунед\n\nМисол: 14.08.1996",
           "passport_issued": "🏢 нишон медиҳад, ки ҳуҷҷат дода шудааст\n\nМисол: Вазорати корҳои дохилии Ӯзбекистон",
           "passport_expiry_date": "🗓 дурустии шиносномаро қайд кунед (DD.MMM.YYYY)",
           "buttons": {
@@ -105,7 +105,7 @@
           }
         },
         "patent": {
-          "title": "Дар маълумоти патентӣ чиро бояд тағир дод?",
+          "title": "Мӯҳлати иттилооти патентӣ чист?",
           "patient_number": "📇 Рақами патентро ворид намоед\nНамуна: 78-324112233",
           "patient_date": "📆 Санаи додани патентро ворид намоед (РР.ММ.СССС)\nНамуна: 14.06.2024",
           "patient_issue_place": "🏢 Нишон диҳед, ки ҳуҷҷатро кӣ додааст\nНамуна: ГУ МВД России по г. Санкт-Петербургу",
