--- a/locales/kg.json
+++ b/locales/kg.json
@@ -10,11 +10,11 @@
   },
   "work_activity_department_name": {
     "title": "Сураныч, арыз берүү департаменттин толук аталышын киргизиңиз (адатта, бул сиздин акыркы каттоодо же миграциялык документиңизде көрсөтүлгөн)",
-    "example_text": "Мисалы: Россиянын Санкт-Петербургдагы Приморский районуна OVM ички иштер министрлиги"
+    "example_text": "Мисалы: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
   },
   "work_activity_department_user_input": {
     "title": "📋 Документ төмөнкүлөрдү көрсөтөт:",
-    "title_dep": "Босс",
+    "title_dep": "Начальнику",
     "description": "Эгер сиз бөлүмдү туура эмес көрсөңүз, \"↩️ Артка\" баскычын басыңыз жана туура аталышты киргизиңиз.",
     "buttons": {
       "correct_btn": "✅ Баары туура ",
@@ -39,15 +39,15 @@
       "name_work": {
         "title": "👨🔧 Сиздин кесибиңиздин атын жөнөтүңүз",
         "description": "📌 Маанилүү: чет өлкөлүк патентте көрсөтүлгөн кесипке гана иштөөгө укуктуу.",
-        "example": "Мисал: Handyman"
+        "example": "Мисал: Разнорабочий"
       },
       "employer_address": {
-        "title": "📍 Иш берүүчүнүн юридикалык дареги: индекси, шаар, көчө, корпус, үй (Кириллицаны)",
-        "example": "Мисал: 196211 Санкт-Петербург, Тинова көчөсү 27"
+        "title": "📍 жумуш берүүчүнүн мыйзамдуу дарегин көрсөтүү: индекс, город, улица, корпус, дом (используйте кириллицу)",
+        "example": "Мисал: 196211 г. Санкт-Петербург, улица Типанова, дом 27"
       },
       "INN": {
         "title": "🔢 Thin Сиздин калай",
-        "format": "Форматы: 10 же 12 сан",
+        "format": "Форматы: 10 или 12 цифр",
         "example": "Мисал: 7701234567"
       }
     },
@@ -58,11 +58,11 @@
     },
     "wa_patent_insurance_company": {
       "title": "🏥 Кайсы камсыздандыруу компаниясы саясатын бергенин көрсөтүңүз",
-      "example": "Мисал: ResoR, Ghatosstrakh, макулдугу"
+      "example": "Мисал: РЕСО‑Гарантия, Ингосстрах, Согласие"
     },
     "wa_polis_date": {
       "title": "📅 VHI саясатынын жарактуулук мөөнөтүн көрсөтүңүз",
-      "description": "Акциянын башынын башталышына жана аяктаганын төмөнкү форматына киргизиңиз: 06/15/2025 дан 06/14/2026 чейин"
+      "description": "Форматта иш-аракеттердин башталышы жана аяктоо датасын киргизиңиз: с 15.06.2025 по 14.06.2026"
     },
     "edit_wa_data": {
       "title": "📋 Ырастоо:",
@@ -94,7 +94,7 @@
         "passport": {
           "title": "📝 Паспорттогу маалыматтардан эмнени өзгөртүү керек?",
           "passport_serial_number": "📇 Серияны жана документ номерин көрсөтүңүз\n\nМисал: № 1225673",
-          "passport_issue_date": "🗓 Чыгарылган датасын көрсөтүңүз (DD.MM.YYYY)\n\nМисал: 08/14/1996",
+          "passport_issue_date": "🗓 Чыгарылган датасын көрсөтүңүз (DD.MM.YYYY)\n\nМисал: 14.08.1996",
           "passport_issued": "🏢 Документ чыгарылганын көрсөтүңүз\n\nМисал: Өзбекстандын Ички иштер министрлиги",
           "passport_expiry_date": "🗓 Pass Паспорттун жарактуулугун көрсөтүңүз (DD.mp3yyyy)",
           "buttons": {
