fix: Добавлена локализация на 7 языков ветки: Трудовая деятельность по патенту.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -15,7 +15,7 @@
   "work_activity_department_user_input": {
     "title": "📋 ستشير المستند:",
     "title_dep": "Начальнику",
-    "description": "إذا أشرت إلى القسم بشكل غير صحيح ، فاضغط على زر \"back\" وأدخل الاسم الصحيح.",
+    "description": "إذا أشرت إلى القسم بشكل غير صحيح ، فاضغط على زر \"↩️ رجوع\" وأدخل الاسم الصحيح.",
     "buttons": {
       "correct_btn": "✅ كل شيء صحيح",
       "cancel_button": "↩️ رجوع"
