--- a/locales/hi.json
+++ b/locales/hi.json
@@ -15,7 +15,7 @@
   "work_activity_department_user_input": {
     "title": "📋 दस्तावेज़ इंगित करेगा:",
     "title_dep": "Начальнику",
-    "description": "यदि आपने विभाग को गलत तरीके से इंगित किया है, तो \"↩ Back\" बटन दबाएं और सही नाम दर्ज करें।",
+    "description": "यदि आपने विभाग को गलत तरीके से इंगित किया है, तो \"↩️ Back\" बटन दबाएं और सही नाम दर्ज करें।",
     "buttons": {
       "correct_btn": "✅ सब सही है ",
       "cancel_button": "↩️ वापस"
