Refactor stamp transfer keyboard and localization updates
- Simplified the text retrieval for passport manual button in `stamp_transfer.py`.
- Added new localization keys in `ru.json` for changing data options.
- Improved error handling for missing translations in `localization.py`.
- Included new router for changing data in `main.py`.
- Implemented changing data handling in `changing_data.py` with appropriate callbacks.
- Created a new keyboard for changing data in `changing_data.py`.
- Added Uzbek localization in `uz.json` for various document processes and user interactions.

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -790,7 +790,9 @@
         }
     },
     "adress_residence_permit": "🏠 Введите адрес, где вы проживаете в РФ\nФормат: индекс, страна, город, улица, дом, корпус, квартира",
-    "stamp_transfer_change_data_before_gen": {
-        "": ""
-    }
+    "what_change_before_gen": "Какое поле вы хотите изменить?",
+    "change_old_passport_data_dict_btn": " 📄 Cтарый паспорт",
+    "change_passport_data_dict_btn": " 📄 Новый паспорт",
+    "change_live_adress_btn": "🏠 Адрес проживания в РФ",
+    "change_phone_number_btn": " 📞  Номер телефона"
 }
