--- a/locales/ru.json
+++ b/locales/ru.json
@@ -226,8 +226,14 @@
         "title": "🏠 Укажите адрес регистрации принимающей стороны (город, улица, дом)",
         "example": " Пример: Санкт-Петербург, улица Салова, дом 45, лит. А"
     },
+    "phone_contact_of_individual": {
+        "title": "☎️ Введите номер телефона контактного лица",
+        "if_have": "(при наличии)",
+        "example": "Пример: 79809008090",
+        "not_have_phone": "Нет номера"
+    },
     "success_data_by": {
-        "title": "✅ Данные о принимающей стороне приняты. Выбрано: Физическое лицо.",
+        "title": "✅ Данные о принимающей стороне приняты.",
         "issue_info": "Выбрано: "
     },
     "ur_job": {
