--- a/locales/ru.json
+++ b/locales/ru.json
@@ -783,7 +783,8 @@
         "work_start_date": "\n📅 Дата начала работы: ",
         "work_end_date": "\n📅 Дата увольнения: ",
         "income": "💰 Доход: ",
-        "no_income": "нет дохода"
+        "no_income": "нет дохода",
+        "mvd_adress":"🏢 Подача заявления:"
     },
     "WorkedLastYearStates": {
         "title": "📋 Подтверждение:",
@@ -823,7 +824,8 @@
     "adress_residence_permit": "🏠 Введите адрес, где вы проживаете в РФ\nФормат: индекс, страна, город, улица, дом, корпус, квартира",
     "what_change_before_gen": "Какое поле вы хотите изменить?",
     "change_old_passport_data_dict_btn": " 📄 Cтарый паспорт",
-    "change_passport_data_dict_btn": " 📄 Новый паспорт",
+    "change_passport_data_dict_btn": " 📄 Паспорт",
+    "change_new_passport_data_dict_btn": " 📄 Новый паспорт",
     "change_live_adress_btn": "🏠 Адрес проживания в РФ",
     "change_phone_number_btn": " 📞  Номер телефона",
     "change_mvd_adress_btn": "🏢 Подача завяления",
@@ -855,5 +857,17 @@
         "passport_issue_date": "🗓 Укажите дату выдачи (ДД.ММ.ГГГГ)\nПример: 14.08.1996",
         "passport_expiry_date": "🗓 Укажите срок действия паспорта (ДД.ММ.ГГГГ)\nПример: 14.08.1996",
         "passport_issue_place": "🏢 Укажите, кем выдан документ\nПример: МВД Узбекистана"
-    }
+    },
+    "change_value_residence_permit": {
+        "serial_number": "📇 Укажите серию и номер документа",
+        "issue_date": "🗓 Укажите дату выдачи ВНЖ (ДД.ММ.ГГГГ)",
+        "issue_place": "🏢 Укажите, кем выдан документ"
+    },
+    "change_serial_number_btn": "🔢 Серия и номер",
+    "change_issue_date_btn": "📅 Дата выдачи",
+    "change_issue_place_btn": "🏢 Кем выдан",
+    "change_residence_permit_dict_btn": " 📄 ВНЖ",
+    "change_travel_outside_Ru_list_btn": "Периоды выезда",
+    "change_worked_last_year_list_btn": "🏢 Место работы",
+    "change_income_last_year_list_btn": "🏢 Сведения о доходе"
 }
