--- a/locales/ru.json
+++ b/locales/ru.json
@@ -362,7 +362,7 @@
         "issue_date": ", срок действия ",
         "issue_passport": " FA ",
         "issue_migr_card_info": "въезд",
-        "issue_migr_card": " Серия ",
+        "issue_migr_card": " cерия ",
         "name_of_org": "• Наименование: ",
         "inn_of_org": "• ИНН: ",
         "adress_of_org": "• Адрес: ",
@@ -373,7 +373,7 @@
         "goal": "🎯 Цель въезда: ",
         "profession": "🧰 Профессия: ",
         "whoaccept": " 👥 Принимающая сторона: ",
-        "doc": "📄 Документ, подтверждающий право пользования помещением",
+        "doc": "📄 Документ, подтверждающий право пользования помещением: ",
         "true_in_organization_doc": "✅ Всё верно – сформировать документ",
         "change_in_organization_doc": "✏️ Изменить"
     },
@@ -403,7 +403,7 @@
     },
     "cert_birth_data_succes": {
         "cert_data": "📄 Свидетельство о рождении: ",
-        "issue_info": " Выдано: "
+        "issue_info": " выдано "
     },
     "info_about_representative": {
         "info_title": "👥 Сведения о законных представителях:",
