Финальные доработки(возможно фиксы в будущем)

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -69,6 +69,10 @@
         "title": "📆 Введите дату рождения в формате ДД.ММ.ГГГГ",
         "example_text": "Пример: 14.08.1996 "
     },
+    "passport_manual_kid_birth_date": {
+        "title": "📆 Введите дату рождения ребенка в формате ДД.ММ.ГГГГ",
+        "example_text": "Пример: 14.08.1996 "
+    },
     "representative_birth_date": {
         "title": "📆 Введите дату рождения законного представителя в формате ДД.ММ.ГГГГ",
         "example_text": "Пример: 14.08.1996"
@@ -145,6 +149,10 @@
         "title": "📍 Сейчас мы оформим уведомление о прибытии для ребенка",
         "desc": "Подготовьте паспорт ребенка, миграционную карту ребенка и адрес проживания в РФ"
     },
+    "to_kid_passport_start": {
+        "title": "📄 Подготовьте паспорт ребенка",
+        "desc": "Как хотите заполнить данные?"
+    },
     "photo_proccess": {
         "description": "📷 Пришлите в чат фото первой страницы паспорта (как на примере выше)"
     },
@@ -161,6 +169,10 @@
     "name_migr_card_arrival_kid": {
         "title": "✍️ Давайте введём данные вручную \nПожалуйста, используйте кириллицу, где возможно",
         "description": "👤 Введите ФИО ребенка(как указано в карте) \nПример: Расулова Азиза Абдуллаевна"
+    },
+    "name_passport_kid": {
+        "title": " Давайте заполним данные  паспорта вручную:",
+        "description": "👤 Введите ФИО ребенка(только кириллицей) \nПример: Расулова Азиза Абдуллаевна"
     },
     "Kid_arrival_data": {
         "title": "📄 Пожалуйста, укажите данные из миграционной карты ребенка",
@@ -357,7 +369,7 @@
         "data_birthday": "🗓 Дата рождения: ",
         "citizenship": "🌍 Гражданство: ",
         "passport": " 📄 Паспорт: ",
-        "issue_info": ", выдан: ",
+        "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
         "issue_passport": " FA ",
         "issue_migr_card_info": "въезд",
@@ -382,14 +394,15 @@
         "data_birthday": "🗓 Дата рождения: ",
         "citizenship": "🌍 Гражданство: ",
         "passport": " 📄 Паспорт: ",
-        "issue_info": ", выдан: ",
+        "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
         "issue_passport": " FA ",
         "issue_migr_card_info": " въезд ",
         "issue_migr_card": " Серия ",
         "name_of_ind": "• ФИО: ",
-        "inn_of_ind": "• Паспорт: ",
+        "passport_of_ind": "• Паспорт: ",
         "adress_of_ind": "• Адрес: ",
+        "birth_of_ind": "• Дата рождения: ",
         "phone_contact_face_of_ind": "• Телефон: ",
         "adress_live_in_rf": "📌 Адрес проживания в РФ: ",
         "migr_card": "📎 Миграционная карта: ",
