Добавил изменения данных ребенка

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -416,8 +416,9 @@
         "mother_related": "👩‍🦰 ДАННЫЕ РОДИТЕЛЯ ИЛИ ОПЕКУНА:",
         "mother_full_name": " ФИО: ",
         "mother_citizenship": " Гражданство: ",
-        "mother_document": " Документ: Паспорт, ",
-        "mother_issue_info": " Выдан: ",
+        "mother_document": " Серия, номер ",
+        "mother_issue_info": "Кем выдан: ",
+        "mother_issue_date": "Дата выдачи",
         "mother_expiry_date": " Срок действия: ",
         "basis_section": "📎 ОСНОВАНИЕ ДЛЯ ПРОДЛЕНИЯ:",
         "basis_patient": " Патент № ",
@@ -439,6 +440,13 @@
             "document_number": " Номер документа:",
             "issue_info": " Кем выдан: "
         },
+        "child_full_name": "ФИО",
+        "child_citizenship": "Гражданство",
+        "child_document": "Серия номер", 
+        "child_expiry_date": "Срок действия",
+        "child_document_number":"Серия Номер",
+        "child_issue_info": "Кем выдан",
+
         "address_section": "🏠 АДРЕС ФАКТИЧЕСКОГО ПРОЖИВАНИЯ:",
         "extend_section": "📆 СРОК, ДО КОТОРОГО ЗАПРАШИВАЕТСЯ ПРОДЛЕНИЕ:",
         "mvd_section": "🏢 ПОДАЧА ЗАЯВЛЕНИЯ:"
