upd: фикс имен ключей

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -532,6 +532,10 @@
         "child_expiry_date": "Срок действия",
         "child_document_number":"Серия Номер",
         "child_issue_info": "Кем выдан",
+        "buttons": {
+            "accept": "✅ Всё верно",
+            "edit": "✏️ Изменить"
+        },
 
         "address_section": "🏠 АДРЕС ФАКТИЧЕСКОГО ПРОЖИВАНИЯ:",
         "extend_section": "📆 СРОК, ДО КОТОРОГО ЗАПРАШИВАЕТСЯ ПРОДЛЕНИЕ:",
