--- a/locales/ru.json
+++ b/locales/ru.json
@@ -996,18 +996,37 @@
 
 
 
-    
+    "change_entry_date_btn":"📅 Дата въезда",
+    "change_card_serial_number_btn":"🔢 Серия и номер",
+    "change_number_migr_card_arrival_btn":"kkkkkkkkkkkkkkkkk",
+    "change_pretria_period_btn":"📅 Срок пребывания",
+    "change_goal_btn":" 🎯 Цель въезда",
+    "change_document_about_home_btn":" 📄 Документ на помещение",
+
+    "change_passport_give_date_input_btn":"📅 Дата выдачи",
+    "change_name_org_btn":"👤 Наименование организации",
+    "change_inn_btn":"🔢 ИНН",
+    "change_full_name_contact_of_organization_btn":"👤 ФИО контактного лица",
+    "change_value_profession": "👨‍🔧 Отправьте название вашей профессии",
+
+
+    "change_passport_serial_number_input_btn":"🔢 Серия и номер",
+    "change_passport_issue_place_input_btn":"🏢 Кем выдан",
+    "change_adress_btn":"📌 Адрес принимающей стороны",
+    "change_phone_btn":"📌 Телефон принимающей стороны",
+
+
     "change_migration_data_dict_btn":"📎 Миграционная карта",
     "change_value_migration_data": {
-        "card_serial_number": "📇 Укажите серию и номер документа",
+        "card_serial_number": "📇 Серия / номер миграционной карты",
         "citizenship": "🌍 Гражданство",
-        "document_about_home": "🗓 Укажите дату выдачи ВНЖ (ДД.ММ.ГГГГ)",
-        "entry_date": "📅 Дата въезда",
+        "document_about_home": "📝 Введите наименование и реквизиты документа.",
+        "entry_date": "📆 Введите дату въезда в РФ в формате ДД.ММ.ГГГГ",
         "full_name": "👤 ФИО",
         "number_migr_card_arrival": "🗓 Укажите дату выдачи ВНЖ (ДД.ММ.ГГГГ)",
-        "pretria_period": "Срок пребывания",
-        "live_adress": "Адрес",
-        "goal": " 🎯 Цель въезда"
+        "pretria_period": "📅 Укажите срок временного пребывания",
+        "live_adress": "🏠 Адрес проживания в РФ",
+        "goal": "✍️ Пожалуйста, укажите цель въезда словами — так, как она указана в миграционной карте."
 
     },
     "change_organization_data_dict_btn":"📄 Паспорт принимающей стороны",
@@ -1036,6 +1055,13 @@
         "full_name_contact_of_organization": "👤 Наименование организации",
         "inn": "🔢 ИНН",
         "name_org": "👤 Наименование организации"
-    }
+    },
 
+    "change_child_cert_info_dict_btn":"📄 Паспорт принимающей стороны",
+    "change_value_child_cert_info": {
+        "adress": "Адрес",
+        "full_name_contact_of_organization": "👤 Наименование организации",
+        "inn": "🔢 ИНН",
+        "name_org": "👤 Наименование организации"
+    }
 }
