finish_residence reason

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -528,15 +528,14 @@
         },
         "child_full_name": "ФИО",
         "child_citizenship": "Гражданство",
-        "child_document": "Серия номер", 
+        "child_document": "Серия номер",
         "child_expiry_date": "Срок действия",
-        "child_document_number":"Серия Номер",
+        "child_document_number": "Серия Номер",
         "child_issue_info": "Кем выдан",
         "buttons": {
             "accept": "✅ Всё верно",
             "edit": "✏️ Изменить"
         },
-
         "address_section": "🏠 АДРЕС ФАКТИЧЕСКОГО ПРОЖИВАНИЯ:",
         "extend_section": "📆 СРОК, ДО КОТОРОГО ЗАПРАШИВАЕТСЯ ПРОДЛЕНИЕ:",
         "mvd_section": "🏢 ПОДАЧА ЗАЯВЛЕНИЯ:"
@@ -981,46 +980,28 @@
     "change_child_certificate_number_btn": "📄 Серия и номер документа",
     "change_child_certificate_issue_place_btn": "🏢 Кем выдан",
     "change_who_for_child_btn": "👶 Степень родства",
-    "change_value_patient_data.patient_number": "📇 Введите номер патента\nПример: 78-324112233",
-    "change_value_patient_data.patient_date": "📆 Введите дату выдачи патента (ДД.ММ.ГГГГ)\nПример: 14.06.2024",
-    "change_value_patient_data.patient_issue_place": "🏢 Укажите, кем выдан документ\nПример:  ГУ МВД России по г. Санкт-Петербургу",
+    "change_value_patient_data": {
+        "patient_number": "📇 Введите номер патента\nПример: 78-324112233",
+        "patient_date": "📆 Введите дату выдачи патента (ДД.ММ.ГГГГ)\nПример: 14.06.2024",
+        "patient_issue_place": "🏢 Укажите, кем выдан документ\nПример:  ГУ МВД России по г. Санкт-Петербургу"
+    },
     "change_value_passport_data.passport_data.passport_issue_place": "🏢 Укажите, кем выдан документ\nПример: МВД Узбекистана",
-    "change_value_marriage_data.spouse_fio": "👤 Введите ФИО супруга(и) (только кириллицей)\nПример: Кислякова Ирина Ивановна",
-    "change_value_marriage_data.issue_date": "📆 Введите дату выдачи свидетельства о браке в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
-    "change_value_marriage_data.marriage_number": "📇 Укажите номер свидетельства о браке\nПример: серия VII-Б №847595",
-    "change_value_marriage_data.marriage_issue_place": "🏢 Укажите, кем выдан документ\nПример: ЗАГС Центрального района г. Санкт-Петербурга",
-    "change_value_child_data.child_fio": "👶 ФИО ребёнка\nПример: Расулова Махлиё Азизовна",
-    "change_value_child_data.child_birth_date": "📆 Введите дату рождения в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
-    "change_value_child_data.child_citizenship": "🌍 Укажите гражданство (на кириллице)\nПример: Узбекистан",
-    "change_value_child_data.child_certificate_number": "📇 Укажите номер свидетельства о рождении\nПример: №123456",
-    "change_value_child_data.child_certificate_issue_place": "🏢 Укажите, кем выдан документ\nПример: ЗАГС Центрального района г. Санкт-Петербурга",
-    "change_value_child_data.who_for_child": "🧑 Укажите степень родства (кем вы приходитесь ребёнку)",
-
-
-
-
-
-    "change_entry_date_btn":"📅 Дата въезда",
-    "change_card_serial_number_btn":"🔢 Серия и номер",
-    "change_number_migr_card_arrival_btn":"kkkkkkkkkkkkkkkkk",
-    "change_pretria_period_btn":"📅 Срок пребывания",
-    "change_goal_btn":" 🎯 Цель въезда",
-    "change_document_about_home_btn":" 📄 Документ на помещение",
-
-    "change_passport_give_date_input_btn":"📅 Дата выдачи",
-    "change_name_org_btn":"👤 Наименование организации",
-    "change_inn_btn":"🔢 ИНН",
-    "change_full_name_contact_of_organization_btn":"👤 ФИО контактного лица",
+    "change_entry_date_btn": "📅 Дата въезда",
+    "change_card_serial_number_btn": "🔢 Серия и номер",
+    "change_number_migr_card_arrival_btn": "kkkkkkkkkkkkkkkkk",
+    "change_pretria_period_btn": "📅 Срок пребывания",
+    "change_goal_btn": " 🎯 Цель въезда",
+    "change_document_about_home_btn": " 📄 Документ на помещение",
+    "change_passport_give_date_input_btn": "📅 Дата выдачи",
+    "change_name_org_btn": "👤 Наименование организации",
+    "change_inn_btn": "🔢 ИНН",
+    "change_full_name_contact_of_organization_btn": "👤 ФИО контактного лица",
     "change_value_profession": "👨‍🔧 Отправьте название вашей профессии",
-
-
-    "change_passport_serial_number_input_btn":"🔢 Серия и номер",
-    "change_passport_issue_place_input_btn":"🏢 Кем выдан",
-    "change_adress_btn":"📌 Адрес принимающей стороны",
-    "change_phone_btn":"📌 Телефон принимающей стороны",
-
-
-    "change_migration_data_dict_btn":"📎 Миграционная карта",
+    "change_passport_serial_number_input_btn": "🔢 Серия и номер",
+    "change_passport_issue_place_input_btn": "🏢 Кем выдан",
+    "change_adress_btn": "📌 Адрес принимающей стороны",
+    "change_phone_btn": "📌 Телефон принимающей стороны",
+    "change_migration_data_dict_btn": "📎 Миграционная карта",
     "change_value_migration_data": {
         "card_serial_number": "📇 Серия / номер миграционной карты",
         "citizenship": "🌍 Гражданство",
@@ -1031,41 +1012,52 @@
         "pretria_period": "📅 Укажите срок временного пребывания",
         "live_adress": "🏠 Адрес проживания в РФ",
         "goal": "✍️ Пожалуйста, укажите цель въезда словами — так, как она указана в миграционной карте."
-
     },
-    "change_organization_data_dict_btn":"📄 Паспорт принимающей стороны",
+    "change_organization_data_dict_btn": "📄 Паспорт принимающей стороны",
     "change_value_organization_data": {
         "adress": "Адрес",
         "full_name_contact_of_organization": "👤 Наименование организации",
         "inn": "🔢 ИНН",
         "name_org": "👤 Наименование организации"
     },
-    "change_individual_data_dict_btn":"📄 Паспорт принимающей стороны",
+    "change_individual_data_dict_btn": "📄 Паспорт принимающей стороны",
     "change_value_individual_data": {
         "adress": "Адрес",
         "full_name_contact_of_organization": "👤 Наименование организации",
         "inn": "🔢 ИНН",
         "name_org": "👤 Наименование организации"
     },
-    "change_phone_by_organisation_btn":"📌 Телефон принимающей стороны",
-    "change_profession_btn":" 🧰 Профессия",
-    "change_age_btn":"",
-    "change_passport_description_btn":"",
-    "change_birth_date_cert_btn":"",
-
-    "change_representative_data_dict_btn":"📄 Паспорт принимающей стороны",
+    "change_phone_by_organisation_btn": "📌 Телефон принимающей стороны",
+    "change_profession_btn": " 🧰 Профессия",
+    "change_age_btn": "",
+    "change_passport_description_btn": "",
+    "change_birth_date_cert_btn": "",
+    "change_representative_data_dict_btn": "📄 Паспорт принимающей стороны",
     "change_value_representative_data": {
         "adress": "Адрес",
         "full_name_contact_of_organization": "👤 Наименование организации",
         "inn": "🔢 ИНН",
         "name_org": "👤 Наименование организации"
     },
-
-    "change_child_cert_info_dict_btn":"📄 Паспорт принимающей стороны",
+    "change_child_cert_info_dict_btn": "📄 Паспорт принимающей стороны",
     "change_value_child_cert_info": {
         "adress": "Адрес",
         "full_name_contact_of_organization": "👤 Наименование организации",
         "inn": "🔢 ИНН",
         "name_org": "👤 Наименование организации"
+    },
+    "change_value_marriage_data": {
+        "spouse_fio": "👤 Введите ФИО супруга(и) (только кириллицей)\nПример: Кислякова Ирина Ивановна",
+        "issue_date": "📆 Введите дату выдачи свидетельства о браке в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
+        "marriage_number": "📇 Укажите номер свидетельства о браке\nПример: серия VII-Б №847595",
+        "marriage_issue_place": "🏢 Укажите, кем выдан документ\nПример: ЗАГС Центрального района г. Санкт-Петербурга"
+    },
+    "change_value_child_data": {
+        "child_fio": "👶 ФИО ребёнка\nПример: Расулова Махлиё Азизовна",
+        "child_birth_date": "📆 Введите дату рождения в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
+        "child_citizenship": "🌍 Укажите гражданство (на кириллице)\nПример: Узбекистан",
+        "child_certificate_number": "📇 Укажите номер свидетельства о рождении\nПример: №123456",
+        "child_certificate_issue_place": "🏢 Укажите, кем выдан документ\nПример: ЗАГС Центрального района г. Санкт-Петербурга",
+        "who_for_child": "🧑 Укажите степень родства (кем вы приходитесь ребёнку)"
     }
 }
