--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1015,37 +1015,12 @@
     },
     "change_organization_data_dict_btn": "📄 Паспорт принимающей стороны",
     "change_value_organization_data": {
-        "adress": "Адрес",
-        "full_name_contact_of_organization": "👤 Наименование организации",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Наименование организации"
+        "adress": "🏠 Укажите юридический адрес организации (город, улица, дом)",
+        "full_name_contact_of_organization": "👔 Укажите ФИО контактного лица в организации",
+        "inn": "🧾 Укажите ИНН организации (если есть)",
+        "name_org": "🏢 Введите наименование организации (полное, на кириллице)"
     },
-    "change_individual_data_dict_btn": "📄 Паспорт принимающей стороны",
-    "change_value_individual_data": {
-        "adress": "Адрес",
-        "full_name_contact_of_organization": "👤 Наименование организации",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Наименование организации"
-    },
-    "change_phone_by_organisation_btn": "📌 Телефон принимающей стороны",
-    "change_profession_btn": " 🧰 Профессия",
-    "change_age_btn": "",
-    "change_passport_description_btn": "",
-    "change_birth_date_cert_btn": "",
-    "change_representative_data_dict_btn": "📄 Паспорт принимающей стороны",
-    "change_value_representative_data": {
-        "adress": "Адрес",
-        "full_name_contact_of_organization": "👤 Наименование организации",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Наименование организации"
-    },
-    "change_child_cert_info_dict_btn": "📄 Паспорт принимающей стороны",
-    "change_value_child_cert_info": {
-        "adress": "Адрес",
-        "full_name_contact_of_organization": "👤 Наименование организации",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Наименование организации"
-    },
+    
     "change_value_marriage_data": {
         "spouse_fio": "👤 Введите ФИО супруга(и) (только кириллицей)\nПример: Кислякова Ирина Ивановна",
         "issue_date": "📆 Введите дату выдачи свидетельства о браке в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
@@ -1059,5 +1034,42 @@
         "child_certificate_number": "📇 Укажите номер свидетельства о рождении\nПример: №123456",
         "child_certificate_issue_place": "🏢 Укажите, кем выдан документ\nПример: ЗАГС Центрального района г. Санкт-Петербурга",
         "who_for_child": "🧑 Укажите степень родства (кем вы приходитесь ребёнку)"
+    },
+
+    "change_profession_btn": " 🧰 Профессия",
+    "change_phone_by_organisation_btn": "📌 Телефон принимающей стороны",
+    "change_phone_by_individual_btn": "📌 Телефон принимающей стороны",
+    "change_value_phone_by_individual":"☎️ Введите номер телефона контактного лица (при наличии)",
+    "change_value_phone_by_organisation":"☎️ Введите номер телефона контактного лица (при наличии)",
+
+
+    "change_individual_data_dict_btn": "📄 Паспорт принимающей стороны",
+    "change_representative_data_dict_btn": "👥 Законный представитель",
+    "change_who_btn": "Степень родства",
+    "change_child_cert_info_dict_btn": "🧑 Свидетельство о рождении",
+
+
+
+
+
+
+    "change_value_individual_data": {
+        "full_name": "Отправьте текстом Фамилию Имя Отчество принимающей стороны",
+        "passport_give_date_input": "Отправьте текстом дату выдачи паспорта",
+        "passport_issue_place_input": "Отправьте текстом кем выдан паспорт\nПример: Отделом УФМС России в Санкт-Петербурге",
+        "passport_serial_number_input": "Отправьте текстом серию и номер паспорта",
+        "phone": "☎️ Введите номер телефона принимающей стороны (при наличии)",
+        "adress": "🏠 Укажите  адрес регистрации принимающей стороны (город, улица, дом)"
+    },
+    "change_value_representative_data": {
+        "full_name": "👶 Укажите ФИО законного представителя ребёнка",
+        "who": "Укажите, кто сопровождает ребёнка или кто подаёт заявление"
+    },
+    "change_value_child_cert_info": {
+        "birth_date": "📆 Введите дату рождения в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
+        "child_certificate_number": "📇 Укажите номер свидетельства о рождении\nПример: №123456",
+        "full_name": "👶 ФИО ребёнка\nПример: РАСУЛОВА МАХЛИЁ АЗИЗОВНА",
+        "child_citizenship": "🌍 Укажите гражданство (на кириллице)\nПример: Узбекистан"
     }
+   
 }
