--- a/locales/ru.json
+++ b/locales/ru.json
@@ -926,7 +926,7 @@
     "change_mvd_adress_btn": "🏢 Подача завяления",
     "return_from_change_data": "↩️ Назад",
     "change_full_name_btn": "👤 ФИО",
-    "change_birth_date_btn": "📅 День рождения",
+    "change_birth_date_btn": "📅  Дата рождения",
     "change_citizenship_btn": "🌍 Гражданство",
     "change_passport_serial_number_btn": "🔢 Серия и номер",
     "change_passport_issue_date_btn": "📅 Дата выдачи",
@@ -1003,22 +1003,22 @@
     "change_phone_btn": "📌 Телефон принимающей стороны",
     "change_migration_data_dict_btn": "📎 Миграционная карта",
     "change_value_migration_data": {
-        "card_serial_number": "📇 Серия / номер миграционной карты",
+        "card_serial_number": "📇 Серия / номер миграционной карты\nПример: 78 0254812",
         "citizenship": "🌍 Гражданство",
         "document_about_home": "📝 Введите наименование и реквизиты документа.",
         "entry_date": "📆 Введите дату въезда в РФ в формате ДД.ММ.ГГГГ",
-        "full_name": "👤 ФИО",
+        "full_name": "👤 Введите ФИО (как указано в карте)\nПример: Расулова Азиза Абдуллаевна",
         "number_migr_card_arrival": "🗓 Укажите дату выдачи ВНЖ (ДД.ММ.ГГГГ)",
-        "pretria_period": "📅 Укажите срок временного пребывания",
+        "pretria_period": "📅 Укажите срок временного пребывания\nПример: 10.08.2025",
         "live_adress": "🏠 Адрес проживания в РФ",
         "goal": "✍️ Пожалуйста, укажите цель въезда словами — так, как она указана в миграционной карте."
     },
-    "change_organization_data_dict_btn": "📄 Паспорт принимающей стороны",
+    "change_organization_data_dict_btn": "Данные принимающей стороны",
     "change_value_organization_data": {
         "adress": "🏠 Укажите юридический адрес организации (город, улица, дом)",
         "full_name_contact_of_organization": "👔 Укажите ФИО контактного лица в организации",
         "inn": "🧾 Укажите ИНН организации (если есть)",
-        "name_org": "🏢 Введите наименование организации (полное, на кириллице)"
+        "name_org": "🏢 Введите наименование организации (полное, на кириллице)\n\nПример: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ»\n(или сокращённо: ООО «ФОРМАТ»)"
     },
     
     "change_value_marriage_data": {
