--- a/locales/ru.json
+++ b/locales/ru.json
@@ -996,16 +996,17 @@
     "change_name_org_btn": "👤 Наименование организации",
     "change_inn_btn": "🔢 ИНН",
     "change_full_name_contact_of_organization_btn": "👤 ФИО контактного лица",
-    "change_value_profession": "👨‍🔧 Отправьте название вашей профессии",
+    "change_value_profession": "👨‍🔧 Отправьте название вашей профессии\nПример: разнорабочий",
     "change_passport_serial_number_input_btn": "🔢 Серия и номер",
     "change_passport_issue_place_input_btn": "🏢 Кем выдан",
     "change_adress_btn": "📌 Адрес принимающей стороны",
     "change_phone_btn": "📌 Телефон принимающей стороны",
     "change_migration_data_dict_btn": "📎 Миграционная карта",
+    "change_value_document_about_home": "📝 Введите наименование и реквизиты документа.\n\nПример: Выписка из ЕГРН от 08.2023",
+
     "change_value_migration_data": {
         "card_serial_number": "📇 Серия / номер миграционной карты\nПример: 78 0254812",
         "citizenship": "🌍 Гражданство",
-        "document_about_home": "📝 Введите наименование и реквизиты документа.",
         "entry_date": "📆 Введите дату въезда в РФ в формате ДД.ММ.ГГГГ",
         "full_name": "👤 Введите ФИО (как указано в карте)\nПример: Расулова Азиза Абдуллаевна",
         "number_migr_card_arrival": "🗓 Укажите дату выдачи ВНЖ (ДД.ММ.ГГГГ)",
